--- a/themes/midnight.yaml
+++ b/themes/midnight.yaml
@@ -27,6 +27,13 @@ midnight:
   paper-listbox-background-color: '#2E333A'
   paper-grey-50: 'var(--primary-text-color)'
   paper-grey-200: '#414A59'
+  paper-grey-500: '#9e9e9e'
+
+  sidebar-text-color: 'var(--primary-text-color)'
+  sidebar-background-color: 'var(--paper-listbox-background-color)'
+  sidebar-icon-color: 'rgba(255, 255, 255, 0.70)'
+  sidebar-selected-text-color: 'var(--primary-text-color)'
+  sidebar-selected-icon-color: 'var(--primary-color)'
 
   # Paper card
   paper-card-header-color: 'var(--accent-color)'
@@ -40,6 +47,10 @@ midnight:
 
   # Labels
   label-badge-red: 'var(--accent-color)'
+  label-badge-blue: '#039be5'
+  label-badge-green: '#0DA035'
+  label-badge-yellow: '#f4b400'
+  label-badge-grey: 'var(--paper-grey-500)'
   label-badge-text-color: 'var(--primary-text-color)'
   label-badge-background-color: '#2E333A'
 
@@ -63,4 +74,17 @@ midnight:
 
   # Google colors
   google-red-500: '#E45E65'
+  google-blue-500: '#4285f4'
   google-green-500: '#39E949'
+  google-yellow-500: '#f4b400'
+  
+  # States and badges */
+  state-icon-color: '#44739e'
+  state-icon-active-color: '#FDD835'
+  state-icon-unavailable-color: 'var(--disabled-text-color)'
+  
+  # Controls
+  toggle-button-color: 'var(--primary-color)'
+  slider-color: 'var(--primary-color)'
+  slider-secondary-color: 'var(--light-primary-color)'
+  slider-bar-color: 'var(--disabled-text-color)'
